2008-01-10  Sam Steingold  <sds@gnu.org>

	* reploop.lisp (frame-up-down): add
	(print-backtrace, break-loop, step-hook-fn): use it
	* debug.d (test_framepointer_arg): report a TYPE-ERROR

2008-01-09  Sam Steingold  <sds@gnu.org>

	* eval.d (reset): replace NOTREACHED with abort

2008-01-09  Sam Steingold  <sds@gnu.org>

	* debug.d (print_back_trace): index is uintL, not int
	(print_bt_to_frame): add
	(DESCRIBE-FRAME, show_stack): use it

2008-01-07  Sam Steingold  <sds@gnu.org>

	* eval.d (interpret_bytecode_): translated labels:
	svref_kein_svector --> svref_not_a_svector
	svref_kein_index --> svref_not_an_index
	* init.lisp (load): translated label: weiter --> proceed
	* condition.lisp (check-type-failed, assert-failed)
	(simple-assert-failed, eval-loaded-form, ctypecase-failed):
	format RESTART-CASE clauses in a more traditional way (lalist
	first)
	* spvw_garcol.d (gc_unmarkcheck): better error reporting
	* spvw.d (init_memory) [DEBUG_SPVW]: print STACK bounds too

2008-01-07  Sam Steingold  <sds@gnu.org>

	fix bug #[ 1448744 ]: :q debugger command does not reset program stack
	* eval.d (reset): save last driver frame and use it instead of
	starting a new driver when the STACK is exhausted

2008-01-06  Sam Steingold  <sds@gnu.org>

	* reploop.lisp (break-loop): remove #\. from the end of a message
	(safe-wr-st): new function, use instead of WRITE-STRING whenever
	it is used with TEXT in this file to
	fix bug #[ 1865636 ]: infinite recursive error reporting

2008-01-06  Sam Steingold  <sds@gnu.org>

	fix bug #[ 1865567 ]: hangs at the end of input script
	* reploop.lisp (main-loop): revert the 2003-12-18 patch: exit on
	EOF on all streams to avoid CLISP hanging at the end of script on
	"clisp < script" and "cat script | clisp"

2008-01-05  Sam Steingold  <sds@gnu.org>

	* Makefile.devel: remove all ffcall-related targets (libffcall is
	now hosted on savannah)
	* ffcall/: remove the tree

2008-01-03  Sam Steingold  <sds@gnu.org>
